plumbed json scenario selector

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -12,7 +12,8 @@
     "from __future__ import print_function\n",
     "import os\n",
     "import ipywidgets as ipyw\n",
-    "from ipywidgets import Dropdown, FloatText, IntSlider, Label, HBox, VBox\n",
+    "from ipywidgets import Dropdown, Checkbox, FloatText, IntSlider, Label, HBox, VBox\n",
+    "from IPython.display import clear_output\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import IPython\n",
@@ -76,15 +77,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "irrig_scen = [\"low\", \"high\"]\n",
-    "irrig_str = ipyw.Text(\"0.5\")\n",
-    "str_d = {\"irrigation\": irrig_str}\n",
-    "def set_irrig(**kwargs):\n",
-    "    for k, v in kwargs.items():\n",
-    "        str_d[k].value = str(v)\n",
-    "w = ipyw.interactive(set_irrig, irrigation=irrig_scen)\n",
-    "display(w)\n",
-    "#str_d['irrigation'].value = 'low'"
+    "def updateScen(**kwargs):\n",
+    "    #print([(k,v) for k, v in kwargs.items()])\n",
+    "    updateScen.sel_scens = [(k,v) for k, v in kwargs.items() if v is True]"
    ]
   },
   {
@@ -95,7 +90,7 @@
    "source": [
     "#scen_names = pd.read_json(os.path.join(\"test_json.json\")).keys().tolist()\n",
     "scen_names = [x.strip(\".json\") for x in os.listdir() if \"Scenario\" in x and \".json\" in x]\n",
-    "scen_names"
+    "#scen_names"
    ]
   },
   {
@@ -104,14 +99,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# scenario selector\n",
-    "#print('ScenarioSelector...')\n",
-    "#print('Scenarios found...')\n",
-    "scen0_chk = ipyw.Checkbox(value=True, description=scen_names[0], disabled=False, indent=False)\n",
-    "scen1_chk = ipyw.Checkbox(value=False, description=scen_names[1], disabled=False, indent=False)\n",
-    "scen2_chk = ipyw.Checkbox(value=False, description=scen_names[2], disabled=False, indent=False)\n",
-    "l_box, c_box, r_box = VBox([scen0_chk]), VBox([scen1_chk]), VBox([scen2_chk])\n",
-    "HBox([l_box, c_box, r_box])"
+    "chk = [Checkbox(description=x) for x in scen_names]\n",
+    "#l_box, c_box, r_box = VBox([chk[0]]), VBox([chk[1]]), VBox([chk[2]])\n",
+    "#HBox([l_box, c_box, r_box])\n",
+    "\n",
+    "ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
    ]
   },
   {
@@ -120,14 +112,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sel_scens = []\n",
-    "if scen0_chk.value:\n",
-    "    sel_scens.append(scen0_chk.description)\n",
-    "if scen1_chk.value:\n",
-    "    sel_scens.append(scen1_chk.description)\n",
-    "if scen2_chk.value:\n",
-    "    sel_scens.append(scen2_chk.description)\n",
-    "sel_scens"
+    "#scen0_chk = Checkbox(value=False, description=scen_names[0], disabled=False, indent=False)\n",
+    "#scen1_chk = Checkbox(value=False, description=scen_names[1], disabled=False, indent=False)\n",
+    "#scen2_chk = Checkbox(value=False, description=scen_names[2], disabled=False, indent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ipyw.interact(updatePlot, **{scen0_chk.description: scen0_chk.value})\n",
+    "#ipyw.interact(updatePlot, **{scen1_chk.description: scen1_chk.value})\n",
+    "#ipyw.interact(updatePlot, **{scen2_chk.description: scen2_chk.value})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sel_scens = []\n",
+    "#if scen0_chk.value:\n",
+    "#    sel_scens.append(scen0_chk.description)\n",
+    "#if scen1_chk.value:\n",
+    "#    sel_scens.append(scen1_chk.description)\n",
+    "#if scen2_chk.value:\n",
+    "#    sel_scens.append(scen2_chk.description)\n",
+    "#sel_scens"
    ]
   },
   {
@@ -169,12 +183,12 @@
     "        if k == \"IRSTAGECAP\":\n",
     "            f = \"RuleBasedIrrigationData.json\"\n",
     "            if isinstance(v, float):\n",
-    "                print(\"uniform max irr mm: {}\".format(v))\n",
+    "                #print(\"uniform max irr mm: {}\".format(v))\n",
     "                df = pd.read_json(os.path.join(ws, f))\n",
     "                print(df[\"IRSTAGECAP\"][\"Value\"])\n",
     "                od = df[\"IRSTAGECAP\"][\"Value\"]\n",
     "                df[\"IRSTAGECAP\"][\"Value\"] = [v for x in od]\n",
-    "                print(df[\"IRSTAGECAP\"][\"Value\"])\n",
+    "                #print(df[\"IRSTAGECAP\"][\"Value\"])\n",
     "                df.to_json(os.path.join(ws, f), indent=4)\n",
     "            elif isinstance(v, list) and len(v) == 5:\n",
     "                print(\"max irr mm per phen: {}\".format(v))\n",
@@ -189,28 +203,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_d = \"_base\"\n",
-    "scen_d = {}\n",
-    "for s in sel_scens:\n",
-    "    # cp ws\n",
-    "    if os.path.exists(s):\n",
-    "        shutil.rmtree(s)\n",
-    "    #if not os.path.exists(sel_scens):\n",
-    "     #   os.mkdir(sel_scens)\n",
-    "    shutil.copytree(base_d, s)\n",
+    "def on_button_clicked(b):\n",
     "    \n",
-    "    sjf = s + \".json\"\n",
-    "    d = process_scen_json(scen_json_fname=sjf)\n",
-    "    print(d)\n",
-    "    scen_d[s] = d\n",
-    "    print(scen_d)\n",
+    "    clear_output()\n",
+    "    display(button)\n",
     "    \n",
-    "    scen_json_to_vinelogic(d=d, ws=s)\n",
-    "    \n",
-    "    \n",
-    "#TODO\n",
-    "#scen_d = mjknowling.process_scen_json()\n",
-    "#TODO"
+    "    #sel_scens = []\n",
+    "    #if scen0_chk.value:\n",
+    "    #    sel_scens.append(scen0_chk.description)\n",
+    "    #if scen1_chk.value:\n",
+    "    #    sel_scens.append(scen1_chk.description)\n",
+    "    #if scen2_chk.value:\n",
+    "    #    sel_scens.append(scen2_chk.description)\n",
+    "    #print(sel_scens)\n",
+    "    sel_scens = updateScen.sel_scens\n",
+    "    if len(sel_scens) == 0:\n",
+    "        raise Exception(\"Nothing to do - no scenarios to evaluate....\")\n",
+    "        \n",
+    "    base_d = \"_base\"\n",
+    "    on_button_clicked.scen_d = {}\n",
+    "    #print(sel_scens)\n",
+    "    for s in sel_scens:\n",
+    "        s = s[0]\n",
+    "        #print(\"scen: {}\".format(s))\n",
+    "        \n",
+    "        # cp ws\n",
+    "        if os.path.exists(s):\n",
+    "            shutil.rmtree(s)\n",
+    "        #if not os.path.exists(sel_scens):\n",
+    "         #   os.mkdir(sel_scens)\n",
+    "        shutil.copytree(base_d, s)\n",
+    "\n",
+    "        sjf = s + \".json\"\n",
+    "        d = process_scen_json(scen_json_fname=sjf)\n",
+    "        #print(\"D {}\".format(d))\n",
+    "        #print(on_button_clicked.scen_d)\n",
+    "        on_button_clicked.scen_d[s] = d\n",
+    "        #print(\"scen_d: \")\n",
+    "        #print(on_button_clicked.scen_d)\n",
+    "\n",
+    "        scen_json_to_vinelogic(d=on_button_clicked.scen_d, ws=s)\n",
+    "\n",
+    "\n",
+    "        #TODO\n",
+    "        #scen_d = mjknowling.process_scen_json()\n",
+    "        #TODO\n",
+    "        \n",
+    "        # now run\n",
+    "        #s = str_d['irrigation'].value\n",
+    "        #print(\"evaluating {}\".format(s))\n",
+    "        _ = mjknowling.run_scen(\"temp\", scen_d=on_button_clicked.scen_d)\n",
+    "        #print(\"done\")\n",
+    "        #plot = p_d['plot'].value\n",
+    "        #print(\"plotting {}\".format(plot))\n",
+    "        #mjknowling.plot_scen(scens, plot)\n",
+    "        \n",
+    "    return on_button_clicked.scen_d"
    ]
   },
   {
@@ -219,16 +267,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#print('Scenario labeler and saver (and model runner) here...')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scen_d"
+    "button = ipyw.Button(description=\"Evaluate Scenario(s)\")\n",
+    "button.on_click(on_button_clicked)\n",
+    "display(button)"
    ]
   },
   {
@@ -236,15 +277,6 @@
    "metadata": {},
    "source": [
     "### Seasonal projections"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import clear_output"
    ]
   },
   {
@@ -380,17 +412,18 @@
     "    clear_output()\n",
     "    display(HBox([l_box, c_box, r_box]))\n",
     "    #display(button)\n",
-    "    irrig = str_d['irrigation'].value\n",
+    "    #irrig = str_d['irrigation'].value\n",
     "    #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
     "    \n",
     "    # TODO: drop irrig scen\n",
-    "    scens = mjknowling.run_scen(irrig, scen_d=scen_d)\n",
+    "    #scens = mjknowling.run_scen(irrig, scen_d=scen_d)\n",
     "    \n",
     "    p_d = plot_request_mapper(l1w=level1_widget, l2w=level2_widget)\n",
     "    plot = p_d['plot'].value\n",
     "    #print(\"plotting {}\".format(plot))\n",
-    "    time.sleep(.00001)\n",
-    "    mjknowling.plot_scen(scens, plot, scen_d=scen_d)"
+    "    time.sleep(.001)\n",
+    "    #print(on_button_clicked.scen_d)\n",
+    "    mjknowling.plot_scen(list(on_button_clicked.scen_d.keys()), plot, scen_d=on_button_clicked.scen_d)"
    ]
   },
   {
@@ -415,15 +448,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## TODO: run model when save scens - for greater efficiency"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -443,13 +467,6 @@
     "# display(level1_widget)\n",
     "# display(level2_widget)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
