--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chk = [Checkbox(description=x) for x in scen_names]\n",
+    "chk = [Checkbox(description=x, value=True) for x in scen_names]\n",
     "#l_box, c_box, r_box = VBox([chk[0]]), VBox([chk[1]]), VBox([chk[2]])\n",
     "#HBox([l_box, c_box, r_box])\n",
     "\n",
@@ -152,7 +152,10 @@
    "source": [
     "def process_scen_json(scen_json_fname):\n",
     "    mapper = {\"Crush Price\": \"grape_price\", \n",
-    "              \"Maximum irrigation mm per phenology\": \"IRSTAGECAP\"}\n",
+    "              \"Maximum irrigation mm per phenology\": \"IRSTAGECAP\",\n",
+    "              \"Water market cost\": \"water_market_rate\",\n",
+    "              \"Water delivery cost\": \"water_delivery_rate\",\n",
+    "             }# \"Cost per tip\": \"\",\"Number of tips\": \"\",\"Cost per spray\": \"\",\"Number of sprays\": \"\",\n",
     "    d = {}\n",
     "    js = pd.read_json(os.path.join(scen_json_fname))\n",
     "    js = js[js.keys()[0]]  # there is only one scen per file\n",
@@ -236,22 +239,22 @@
     "\n",
     "        sjf = s + \".json\"\n",
     "        d = process_scen_json(scen_json_fname=sjf)\n",
-    "        #print(\"D {}\".format(d))\n",
+    "        #TODO\n",
+    "        #scen_d = mjknowling.process_scen_json()\n",
+    "        #TODO\n",
     "        #print(on_button_clicked.scen_d)\n",
     "        on_button_clicked.scen_d[s] = d\n",
     "        #print(\"scen_d: \")\n",
     "        #print(on_button_clicked.scen_d)\n",
     "\n",
     "        scen_json_to_vinelogic(d=on_button_clicked.scen_d, ws=s)\n",
-    "\n",
-    "\n",
     "        #TODO\n",
-    "        #scen_d = mjknowling.process_scen_json()\n",
+    "        #mjknowling.scen_json_to_vinelogic(d=on_button_clicked.scen_d, ws=s)\n",
     "        #TODO\n",
     "        \n",
     "        # now run\n",
     "        #s = str_d['irrigation'].value\n",
-    "        #print(\"evaluating {}\".format(s))\n",
+    "        print(\"evaluating {}\".format(s))\n",
     "        _ = mjknowling.run_scen(\"temp\", scen_d=on_button_clicked.scen_d)\n",
     "        #print(\"done\")\n",
     "        #plot = p_d['plot'].value\n",
@@ -443,6 +446,15 @@
    "outputs": [],
    "source": [
     "print('I want to know...')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(button)"
    ]
   },
   {
