--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,33 +73,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def updateScen(**kwargs):\n",
-    "    #print([(k,v) for k, v in kwargs.items()])\n",
-    "    updateScen.sel_scens = [(k,v) for k, v in kwargs.items() if v is True]"
+    "    #print([(k,v) for k, v in kwargs.items()])?\n",
+    "    updateScen.sel_scens = {k: v for k, v in kwargs.items() if v is True}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Scenario01.json': 'Low',\n",
+       " 'Scenario02.json': 'H',\n",
+       " 'Scenario03.json': 'Scenario03'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#scen_names = pd.read_json(os.path.join(\"test_json.json\")).keys().tolist()\n",
-    "scen_names = [x.strip(\".json\") for x in os.listdir() if \"Scenario\" in x and \".json\" in x]\n",
-    "#scen_names"
+    "scen_names = {}\n",
+    "scen_fnames = [x for x in os.listdir() if \".json\" in x]\n",
+    "for js in scen_fnames:\n",
+    "    scen_names[js] = pd.read_json(os.path.join(js)).keys()[0]  #.tolist())\n",
+    "#scen_names = [x.strip(\".json\") for x in os.listdir() if \"Scenario\" in x and \".json\" in x]\n",
+    "scen_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "14f7b76ff23d43319d0d2e380df94a49",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Checkbox(value=True, description='Low'), Checkbox(value=True, description='H'), Checkbox…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "chk = [Checkbox(description=x, value=True) for x in scen_names]\n",
+    "chk = [Checkbox(description=x, value=True) for i, x in scen_names.items()]\n",
     "#l_box, c_box, r_box = VBox([chk[0]]), VBox([chk[1]]), VBox([chk[2]])\n",
     "#HBox([l_box, c_box, r_box])\n",
     "\n",
@@ -108,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,26 +250,42 @@
     "    #if scen2_chk.value:\n",
     "    #    sel_scens.append(scen2_chk.description)\n",
     "    #print(sel_scens)\n",
-    "    sel_scens = updateScen.sel_scens\n",
-    "    if len(sel_scens) == 0:\n",
+    "    ss = updateScen.sel_scens\n",
+    "    print(ss)\n",
+    "    if len(ss) == 0:\n",
     "        raise Exception(\"Nothing to do - no scenarios to evaluate....\")\n",
+    "        \n",
+    "    sel_scens = {}\n",
+    "    for i in ss:\n",
+    "        f = {k: v for k, v in scen_names.items() if v == i}\n",
+    "        #f = list(f.keys())\n",
+    "        sel_scens.update(f)\n",
+    "    print(sel_scens)\n",
+    "    on_button_clicked.sel_scens = sel_scens\n",
+    "    \n",
+    "    # for old\n",
+    "    sel_scens = [k for k, v in sel_scens.items()]\n",
     "        \n",
     "    base_d = \"_base\"\n",
     "    on_button_clicked.scen_d = {}\n",
     "    #print(sel_scens)\n",
-    "    for s in sel_scens:\n",
-    "        s = s[0]\n",
+    "    for sjf in sel_scens:\n",
+    "        print(sjf)\n",
+    "        #s = s[0]\n",
     "        #print(\"scen: {}\".format(s))\n",
     "        \n",
     "        # cp ws\n",
+    "        s = sjf.split(\".json\")[0]\n",
     "        if os.path.exists(s):\n",
     "            shutil.rmtree(s)\n",
     "        #if not os.path.exists(sel_scens):\n",
     "         #   os.mkdir(sel_scens)\n",
     "        shutil.copytree(base_d, s)\n",
     "\n",
-    "        sjf = s + \".json\"\n",
+    "        #sjf = s + \".json\"\n",
+    "        print(sjf)\n",
     "        d = process_scen_json(scen_json_fname=sjf)\n",
+    "        print(d)\n",
     "        #TODO\n",
     "        #scen_d = mjknowling.process_scen_json()\n",
     "        #TODO\n",
@@ -261,18 +308,66 @@
     "        #print(\"plotting {}\".format(plot))\n",
     "        #mjknowling.plot_scen(scens, plot)\n",
     "        \n",
-    "    return on_button_clicked.scen_d"
+    "    return on_button_clicked.scen_d, on_button_clicked.sel_scens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e054ed1e365458c8e8e22be2d1bda76",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Evaluate Scenario(s)', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Low': True}\n",
+      "{'Scenario01.json': 'Low'}\n",
+      "Scenario01.json\n",
+      "Scenario01.json\n",
+      "{'grape_price': 607.0, 'IRSTAGECAP': 50.0}\n",
+      "evaluating Scenario01\n"
+     ]
+    }
+   ],
    "source": [
     "button = ipyw.Button(description=\"Evaluate Scenario(s)\")\n",
     "button.on_click(on_button_clicked)\n",
     "display(button)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'Scenario01': {'grape_price': 607.0, 'IRSTAGECAP': 50.0}},\n",
+       " {'Scenario01.json': 'Low'})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "on_button_clicked.scen_d, on_button_clicked.sel_scens"
    ]
   },
   {
@@ -284,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,15 +518,24 @@
     "    \n",
     "    p_d = plot_request_mapper(l1w=level1_widget, l2w=level2_widget)\n",
     "    plot = p_d['plot'].value\n",
-    "    #print(\"plotting {}\".format(plot))\n",
     "    time.sleep(.001)\n",
-    "    #print(on_button_clicked.scen_d)\n",
-    "    mjknowling.plot_scen(list(on_button_clicked.scen_d.keys()), plot, scen_d=on_button_clicked.scen_d)"
+    "    print(on_button_clicked.scen_d, on_button_clicked.sel_scens)\n",
+    "    dd = {}\n",
+    "    for k, v in on_button_clicked.sel_scens.items():\n",
+    "        dd[v] = on_button_clicked.scen_d[k.strip(\".json\")]\n",
+    "    print(list(on_button_clicked.scen_d.keys()))\n",
+    "    print(dd)\n",
+    "    cd = {}\n",
+    "    for k, v in on_button_clicked.sel_scens.items():\n",
+    "        cd[k.strip(\".json\")] = on_button_clicked.sel_scens[k]\n",
+    "    print(cd)\n",
+    "    print(\"plotting {}\".format(plot))\n",
+    "    mjknowling.plot_scen(cd, plot, scen_d=dd)#on_button_clicked.scen_d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,9 +545,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I want to know...\n"
+     ]
+    }
+   ],
    "source": [
     "print('I want to know...')"
    ]
@@ -454,8 +566,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(button)"
+    "#display(button)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "on_button_clicked.sel_scens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "on_button_clicked.scen_d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd = {}\n",
+    "for k, v in on_button_clicked.sel_scens.items():\n",
+    "    cd[k.strip(\".json\")] = on_button_clicked.sel_scens[k]\n",
+    "cd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
