added invest states

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,22 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Scenario01.json': 'Low',\n",
-       " 'Scenario02.json': 'H',\n",
-       " 'Scenario03.json': 'Scenario03'}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scen_names = {}\n",
     "scen_fnames = [x for x in os.listdir() if \".json\" in x]\n",
@@ -111,24 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14f7b76ff23d43319d0d2e380df94a49",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Checkbox(value=True, description='Low'), Checkbox(value=True, description='H'), Checkbox…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chk = [Checkbox(description=x, value=True) for i, x in scen_names.items()]\n",
     "#l_box, c_box, r_box = VBox([chk[0]]), VBox([chk[1]]), VBox([chk[2]])\n",
@@ -139,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,61 +285,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e054ed1e365458c8e8e22be2d1bda76",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Evaluate Scenario(s)', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Low': True}\n",
-      "{'Scenario01.json': 'Low'}\n",
-      "Scenario01.json\n",
-      "Scenario01.json\n",
-      "{'grape_price': 607.0, 'IRSTAGECAP': 50.0}\n",
-      "evaluating Scenario01\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "button = ipyw.Button(description=\"Evaluate Scenario(s)\")\n",
     "button.on_click(on_button_clicked)\n",
     "display(button)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "({'Scenario01': {'grape_price': 607.0, 'IRSTAGECAP': 50.0}},\n",
-       " {'Scenario01.json': 'Low'})"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "on_button_clicked.scen_d, on_button_clicked.sel_scens"
    ]
   },
   {
@@ -379,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,6 +324,10 @@
     "            p_d['plot'].value = 'soilmoisturets'\n",
     "        elif l1w.value == \"root uptake\" and l2w.value == \"time series\":\n",
     "            p_d['plot'].value = 'rootuptakets'\n",
+    "        elif l1w.value == \"rainfall\" and l2w.value == \"time series\":\n",
+    "            p_d['plot'].value = 'raints'\n",
+    "        elif l1w.value == \"ponding\" and l2w.value == \"time series\":\n",
+    "            p_d['plot'].value = 'pondts'\n",
     "        elif l1w.value == \"costs\" and l2w.value == \"irrigation\":\n",
     "            p_d['plot'].value = 'irrigationcost'\n",
     "        elif l1w.value == \"end of season\" and l2w.value == \"yield\":\n",
@@ -427,6 +355,13 @@
     "            p_d['plot'].value = 'costcontributions'\n",
     "        elif l1w.value == \"bottom line\" and l2w.value == \"gross margin\":\n",
     "            p_d['plot'].value = 'grossmargin'\n",
+    "        elif l1w.value == \"investigation\":\n",
+    "            if l2w.value == \"available energy\":\n",
+    "                p_d['plot'].value = 'cpoolts'\n",
+    "            if l2w.value == \"fruit energy sink\":\n",
+    "                p_d['plot'].value = 'fruitsinkts'\n",
+    "            if l2w.value == \"soil water stress index\":\n",
+    "                p_d['plot'].value = 'swstressts'\n",
     "        else:\n",
     "            p_d['plot'].value = 'underdev'\n",
     "    else:\n",
@@ -436,21 +371,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d0 = {'how my vine is developing' : ['growth', 'key dates', 'end of season'], \n",
-    "      'where my water is going' : ['irrigation', 'soil moisture', ],\n",
+    "d0 = {'how my vine is developing' : ['growth', 'key dates', 'end of season', 'investigation'], \n",
+    "      'where my water is going' : ['irrigation', 'rainfall', 'ponding', 'evaporation', \n",
+    "                                   'infiltration', 'soil moisture', 'root uptake'],\n",
     "      'what my financial position is': ['revenue', 'costs', 'bottom line']}\n",
-    "#'infiltration', 'evaporation', 'root uptake'\n",
     "d1 = {v: [] for v in [x for y in list(d0.values()) for x in y]}  # one level? at a time - to avoid multi-index hassle\n",
     "d1['irrigation'] = ['time series', 'total']\n",
     "d1['infiltration'] = ['time series']\n",
     "d1['evaporation'] = ['time series']\n",
     "d1['soil moisture'] = ['time series']\n",
     "d1['root uptake'] = ['time series']\n",
+    "d1['rainfall'] = ['time series']\n",
+    "d1['ponding'] = ['time series']\n",
     "d1['key dates'] = ['bud burst', 'first flower', 'veraison', 'harvest']\n",
+    "d1['investigation'] = ['available energy', 'fruit energy sink', 'soil water stress index']\n",
     "d1['growth'] = ['canopy', 'fruit', 'Brix']\n",
     "d1['end of season'] = ['yield']\n",
     "d1['revenue'] = ['crush']\n",
@@ -481,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,17 +483,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I want to know...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('I want to know...')"
    ]
@@ -592,18 +522,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "cd = {}\n",
-    "for k, v in on_button_clicked.sel_scens.items():\n",
-    "    cd[k.strip(\".json\")] = on_button_clicked.sel_scens[k]\n",
-    "cd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -628,6 +546,48 @@
     "# display(level1_widget)\n",
     "# display(level2_widget)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
