VineLOGIC install workflow - take two

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -39,18 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Testing R env and instaallation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pyemu\n",
-    "wd = os.path.join(\"irrig_base\")\n",
-    "pyemu.os_utils.run(\"Rscript run_vinelogic.R\", cwd=wd)"
+    "### Testing R env and installation"
    ]
   },
   {
@@ -68,11 +57,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import platform\n",
+    "print(\"running on...: {}\".format(platform.platform()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import subprocess\n",
     "d = os.getcwd()\n",
-    "f = open(r'{}\\install_VineLOGIC.stdout'.format(d), 'w')\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print([r'{}\\install_VineLOGIC.bat'.format(os.getcwd())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(os.path.join(d, 'install_VineLOGIC.stdout'), 'w')\n",
+    "print(\"opened {}\".format(f))\n",
     "subprocess.call([r'{}\\install_VineLOGIC.bat'.format(d)], shell=True, stdout=f)\n",
+    "print(\"done calling\")\n",
     "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"run test.R\")\n",
+    "pyemu.os_utils.run(\"Rscript test.R\", cwd=d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"try VineLOGIC\")\n",
+    "wd = os.path.join(\"irrig_base\")\n",
+    "pyemu.os_utils.run(\"Rscript run_vinelogic.R\", cwd=wd)"
    ]
   },
   {
@@ -80,6 +120,27 @@
    "metadata": {},
    "source": [
     "### My Vineyard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "f = open(r'c:\\temp\\temp.txt','w')\n",
+    "subprocess.call(['dir', r'c:\\temp'], shell=True, stdout=f)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subprocess.check_output"
    ]
   },
   {
@@ -619,6 +680,38 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# display(level0_widget)\n",
+    "# display(level1_widget)\n",
+    "# display(level2_widget)"
+   ]
   },
   {
    "cell_type": "code",
