--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -21,7 +21,9 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "import mjknowling\n",
     "import time\n",
-    "import shutil"
+    "import shutil\n",
+    "import platform\n",
+    "print(\"running on...: {}\".format(platform.platform()))"
    ]
   },
   {
@@ -39,80 +41,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Testing R env and installation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Installing VineLOGIC R package - after building *.tar.gz file; see https://gitlab.com/mjknowling/da_opt_vinelogic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import platform\n",
-    "print(\"running on...: {}\".format(platform.platform()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import subprocess\n",
-    "d = os.getcwd()\n",
-    "print(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print([r'{}\\install_VineLOGIC.bat'.format(os.getcwd())])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = open(os.path.join(d, 'install_VineLOGIC.stdout'), 'w')\n",
-    "print(\"opened {}\".format(f))\n",
-    "subprocess.call([r'{}\\install_VineLOGIC.bat'.format(d)], shell=True, stdout=f)\n",
-    "print(\"done calling\")\n",
-    "f.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"run test.R\")\n",
-    "pyemu.os_utils.run(\"Rscript test.R\", cwd=d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"try VineLOGIC\")\n",
-    "wd = os.path.join(\"irrig_base\")\n",
-    "pyemu.os_utils.run(\"Rscript run_vinelogic.R\", cwd=wd)"
+    "### Installing VineLOGIC R package - after building *.tar.gz file; see https://gitlab.com/mjknowling/da_opt_vinelogic\n",
+    "call = 'R CMD INSTALL VineLOGIC_0.1.0.tar.gz'\n",
+    "r = os.system(call)\n",
+    "if r != 0:\n",
+    "    raise Exception(\"VineLOGIC build/install failed... go to https://gitlab.com/mjknowling/da_opt_vinelogic\")"
    ]
   },
   {
@@ -120,27 +53,6 @@
    "metadata": {},
    "source": [
     "### My Vineyard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import subprocess\n",
-    "f = open(r'c:\\temp\\temp.txt','w')\n",
-    "subprocess.call(['dir', r'c:\\temp'], shell=True, stdout=f)\n",
-    "f.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subprocess.check_output"
    ]
   },
   {
