--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -326,8 +326,8 @@
     "        \n",
     "        # now run\n",
     "        #s = str_d['irrigation'].value\n",
-    "        print(\"evaluating {}....\".format(s))\n",
     "        _ = mjknowling.run_scen(\"temp\", scen_d=on_button_clicked.scen_d)\n",
+    "        print(\"evaluation of {} complete\".format(s))\n",
     "        #plot = p_d['plot'].value\n",
     "        #print(\"plotting {}\".format(plot))\n",
     "        #mjknowling.plot_scen(scens, plot)\n",
@@ -562,7 +562,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
+    "#ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
    ]
   },
   {
@@ -571,7 +571,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(button)"
+    "#display(button)"
    ]
   },
   {
